--- a/js/views/profile.html
+++ b/js/views/profile.html
@@ -151,14 +151,10 @@
             </div>
           </div>
 
-          <hr>
-
-          <div class="control-group">
-            <div class="controls">
-              <button   type="submit" 
-                        class="btn btn-success"
-                        ng-click="save(resources)">Save</button>
-            </div>
+          <div class="form-actions">
+            <button   type="submit" 
+                      class="btn btn-success"
+                      ng-click="save(resources)">Save Profile</button>
           </div>
 
         </form>
@@ -216,14 +212,10 @@
             </div>
           </div>
 
-          <hr>
-
-          <div class="control-group">
-            <div class="controls">
-              <button   type="submit" 
-                        class="btn btn-success"
-                        ng-click="change(passwords)">Change password</button>
-            </div>
+          <div class="form-actions">
+            <button   type="submit" 
+                      class="btn btn-success"
+                      ng-click="change(passwords)">Change password</button>
           </div>
 
         </form>
