--- a/js/views/messages.html
+++ b/js/views/messages.html
@@ -69,7 +69,7 @@
           <fieldset>
         
             <div class="control-group">
-              <label>Broadcast</label>
+              <label class="control-label">Broadcast</label>
               <div  class="btn-group"  
                     bs-buttons-checkbox="" 
                     data-toggle="buttons-checkbox">
@@ -89,7 +89,7 @@
             </div>
 
             <div class="control-group">
-              <label>Receviers</label>
+              <label class="control-label">Receviers</label>
               <select data-placeholder="Choose a Recipient" 
                       multiple 
                       class="chzn-select" 
@@ -98,13 +98,11 @@
                       ng-model="message.receivers" 
                       ng-options="receiver.name group by receiver.group for receiver in receviersList">
               </select>
-
               <!-- <p ng-repeat="receiver in message.receivers"><strong>{{receiver.id}}</strong></p> -->
-
             </div>
 
             <div class="control-group">
-              <label>Subject</label>
+              <label class="control-label">Subject</label>
               <input type="text" 
                       class="span5"
                       ng-model="message.subject"
@@ -113,7 +111,7 @@
 
 
             <div class="control-group">
-              <label>Message</label>
+              <label class="control-label">Message</label>
               <textarea rows="7" 
                         class="span7"
                         ng-model="message.body"></textarea>
