--- a/js/views/profile.html
+++ b/js/views/profile.html
@@ -53,6 +53,8 @@
 
         <!-- profile info -->
         <dl>
+          <dt>User Groups</dt>
+            <dd>{{groups}}</dd>
           <dt>Email</dt>
             <dd>{{resources.EmailAddress}}</dd>
           <dt>Phone</dt>
