user role added to profile view & app controller cleaned a bit

--- a/js/views/profile.html
+++ b/js/views/profile.html
@@ -55,6 +55,8 @@
         <dl>
           <dt>User Groups</dt>
             <dd>{{groups}}</dd>
+          <dt>Role</dt>
+            <dd>{{resources.role|translateRole}}</dd>
           <dt>Email</dt>
             <dd>{{resources.EmailAddress}}</dd>
           <dt>Phone</dt>
