first stage in toggle-able inline form views in timeline

--- a/css/styles.css
+++ b/css/styles.css
@@ -505,6 +505,24 @@ label {
 
 
 
+
+.form-toggled {
+  
+}
+
+.form-toggled h4 {
+  margin: 0 auto 15px auto;
+}
+
+
+
+
+
+
+
+
+
+
 /*.meny {
   display: none;
   padding: 20px;
