--- a/js/views/groups.html
+++ b/js/views/groups.html
@@ -311,7 +311,7 @@
               <td>
                 <select style="margin:0" 
                         ng-model="candidate.group" 
-                        ng-options="group.name for group in groups">
+                        ng-options="group.name for group in data.groups">
                   <option value="">-- select a group --</option>
                 </select>
                 <button style="margin-left: 5px;" 
