--- a/js/views/planboard.html
+++ b/js/views/planboard.html
@@ -109,115 +109,110 @@
 <div class="row-fluid" ng-show="views.slot">
 
   <form class="form-inline form-toggled well">
+
+    <!-- close btn -->
+    <button ng-click="resetInlineForms()" 
+            class="close">&times;</button>
+    <!-- end close btn -->
   
     <h4>Time Slot Manager</h4>
+    <hr>
+
+
 
     <!-- slot start -->
-    <label>From</label>
-
-    <!-- date -->
-    <div class="control-group" style="display: inline;">
-
-      <input  name="date-start" 
-              style="width: 105px" 
-              type="text" 
-              ng-model="slot.start.date" 
-              data-date-format="dd-mm-yyyy" 
-              bs-datepicker="">
-
-      <i class="icon-calendar" style="position: relative; margin: 2.5px 0 0 -24px;"></i>
-
+    <div class="form-elements-group">
+      <label>From</label>
+      <!-- date -->
+      <div class="control-group dater">
+        <input  name="date-start" 
+                type="text" 
+                ng-model="slot.start.date" 
+                data-date-format="dd-mm-yyyy" 
+                bs-datepicker="">
+        <i class="icon-calendar"></i>
+      </div>
+      <!-- end date -->
+      <!-- time -->
+      <div class="control-group timer">
+        <input  name="time-start" 
+                type="text" 
+                ng-model="slot.start.time" 
+                bs-timepicker>
+        <i class="icon-time"></i>
+      </div>
+      <!-- end time -->
     </div>
-    <!-- end date -->
-
-    <!-- time -->
-    <div class="control-group" style="display: inline; margin-left: 5px">
-
-      <input  name="time-start" 
-              type="text" 
-              class="input-small" 
-              ng-model="slot.start.time" 
-              bs-timepicker>
-
-      <i class="icon-time" style="position: relative; margin: 2.5px 0 0 -24px;"></i>
-    </div>
-    <!-- end time -->
-
     <!-- end slot start -->
 
+
+
     <!-- slot end -->
-    <label style="margin-left: 15px">Till</label>
-
-    <!-- date -->
-    <div class="control-group" style="display: inline;">
-
-      <input  name="date-end" 
-              style="width: 105px"  
-              type="text" 
-              ng-model="slot.end.date" 
-              data-date-format="dd-mm-yyyy" 
-              bs-datepicker="">
-
-      <i class="icon-calendar" style="position: relative; margin: 2.5px 0 0 -24px;"></i>
-
+    <div class="form-elements-group">
+      <label>Till</label>
+      <!-- date -->
+      <div class="control-group dater">
+        <input  name="date-end" 
+                type="text" 
+                ng-model="slot.end.date" 
+                data-date-format="dd-mm-yyyy" 
+                bs-datepicker="">
+        <i class="icon-calendar"></i>
+      </div>
+      <!-- end date -->
+      <!-- time -->
+      <div class="control-group timer">
+        <input  name="time-end" 
+                type="text" 
+                ng-model="slot.end.time" 
+                bs-timepicker>
+        <i class="icon-time"></i>
+      </div>
+      <!-- end time -->
     </div>
-    <!-- end date -->
-
-    <!-- time -->
-    <div class="control-group" style="display: inline; margin-left: 5px">
-
-      <input  name="time-end" 
-              type="text" 
-              class="input-small" 
-              ng-model="slot.end.time" 
-              bs-timepicker>
-
-      <i class="icon-time" style="position: relative; margin: 2.5px 0 0 -24px;"></i>
-    </div>
-    <!-- end time -->
-
     <!-- end slot end -->
 
+
     <!-- slot state -->
-    <label style="margin-left: 15px">State</label>
-    <select ng-model="slot.state" 
-            ng-options="option as value for (option, value) in states">
-      <option value="">-- selecteer state --</option>
-    </select>
+    <div class="form-elements-group">
+      <label>State</label>
+      <select ng-model="slot.state" 
+              ng-options="option as value for (option, value) in states">
+        <option value="">select a state</option>
+      </select>
+    </div>
     <!-- end slot state -->
 
+
     <!-- slot recursive -->
-    <button type="button" 
-            class="btn" 
-            ng-model="slot.recursive" 
-            style="margin-left: 15px" 
-            bs-button>Wekelijks</button>
+    <div class="form-elements-group">
+      <label>Re-occuring</label>
+      <input type="checkbox" ng-model="slot.recursive">
+    </div>
     <!-- end slot recursive -->
 
+
     <!-- slot actions -->
-    <div  class="btn-group" 
-          ng-hide="original" 
-          style="display: inline; margin-left:10px">
+    <div class="form-elements-actions pull-right">
+      
+      <div ng-hide="original">
+        <button type="button" 
+                ng-click="add(slot)" 
+                class="btn btn-success">Add</button>
+      </div>
 
-      <button type="submit" 
-              ng-click="add(slot)" 
-              class="btn btn-success">Add</button>
-
-    </div>
-    <div  class="btn-group" 
-          ng-show="original" 
-          style="display: inline; margin-left:10px">
-
-      <button type="submit" 
-              ng-click="change(original, slot)" 
-              class="btn btn-success">Change</button>
-
-      <button type="submit" 
-              ng-click="delete(slot.id)" 
-              class="btn btn-danger">Delete</button>
+      <div ng-show="original">
+        <button type="button" 
+                ng-click="change(original, slot)" 
+                class="btn btn-success">Change</button>
+        <button type="button" 
+                ng-click="delete(slot.id)" 
+                class="btn btn-danger">Delete</button>
+      </div>
 
     </div>
     <!-- end slot actions -->
+
 
   </form>
 </div>
