--- a/js/views/planboard.html
+++ b/js/views/planboard.html
@@ -206,7 +206,7 @@
                 ng-click="change(original, slot)" 
                 class="btn btn-success">Change</button>
         <button type="button" 
-                ng-click="delete(slot.id)" 
+                ng-click="delete()" 
                 class="btn btn-danger">Delete</button>
       </div>
 
