--- a/css/timeline.css
+++ b/css/timeline.css
@@ -109,7 +109,8 @@
   background-image: -o-linear-gradient(top, #4f824f, #406940);
   background-image: linear-gradient(to bottom, #4f824f, #406940);
   background-repeat: repeat-x;
-  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ff4f824f', endColorstr='#ff406940', GradientType=0);
+  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ff4f824f', 
+  endColorstr='#ff406940', GradientType=0);
 }
 
 #memberBars .bar-BeschikbaarZuid {
@@ -120,7 +121,8 @@
   background-image: -o-linear-gradient(top, #e08a0c, #c77b0a);
   background-image: linear-gradient(to bottom, #e08a0c, #c77b0a);
   background-repeat: repeat-x;
-  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ffe08a0c', endColorstr='#ffc77b0a', GradientType=0);
+  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ffe08a0c', 
+  endColorstr='#ffc77b0a', GradientType=0);
 }
 
 #memberBars .bar-BeschikbaarNoord {
@@ -131,7 +133,8 @@
   background-image: -o-linear-gradient(top, #1a1a1a, #050505);
   background-image: linear-gradient(to bottom, #1a1a1a, #050505);
   background-repeat: repeat-x;
-  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ff1a1a1a', endColorstr='#ff050505', GradientType=0);  
+  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ff1a1a1a', 
+  endColorstr='#ff050505', GradientType=0);  
 }
 
 #memberBars .bar-SchipperVanDienst {
@@ -142,7 +145,8 @@
   background-image: -o-linear-gradient(top, #e0c100, #c7ac00);
   background-image: linear-gradient(to bottom, #e0c100, #c7ac00);
   background-repeat: repeat-x;
-  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ffe0c100', endColorstr='#ffc7ac00', GradientType=0); 
+  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ffe0c100', 
+  endColorstr='#ffc7ac00', GradientType=0); 
 }
 
 #memberBars .bar-Unavailable {
@@ -153,7 +157,8 @@
   background-image: -o-linear-gradient(top, #a93232, #8f2b2b);
   background-image: linear-gradient(to bottom, #a93232, #8f2b2b);
   background-repeat: repeat-x;
-  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ffa93232', endColorstr='#ff8f2b2b', GradientType=0);  
+  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ffa93232', 
+  endColorstr='#ff8f2b2b', GradientType=0);  
 }
 
 
@@ -322,6 +327,8 @@ div.timeline-event {
     display: inline-block;
 
     /*padding: 0;*/
+
+    background-color: #ddd;
 }
 
 div.timeline-event-selected {
@@ -382,6 +389,8 @@ div.timeline-event-content {
 /*    margin: 5px;
     white-space: nowrap;
     overflow: hidden;*/
+
+    /*background-color: #ddd*/
 }
 
 div.timeline-groups-axis {
@@ -405,6 +414,7 @@ div.timeline-customtime {
     background-color: #6E94FF;
     width: 2px;
     cursor: move;
+    z-index: 150;
 }
 
 /*div.timeline-navigation {
@@ -579,32 +589,32 @@ div.timeline-navigation-move-right {
 
 
 
-.state-available {
+div.timeline-event.state-available {
     background-color: #4f824f;
     text-indent: -9999px;
 }
 
-.state-available-south {
+div.timeline-event.state-available-south {
     background-color: #e08a0c;
     text-indent: -9999px;
 }
 
-.state-available-north {
+div.timeline-event.state-available-north {
     background-color: black;
     text-indent: -9999px;
 }
 
-.state-schipper-service {
+div.timeline-event.state-schipper-service {
     background-color: #e0c100;
     text-indent: -9999px;
 }
 
-.state-unreached {
+div.timeline-event.state-unreached {
     background-color: #65619b;
     text-indent: -9999px;
 }
 
-.state-unavailable {
+div.timeline-event.state-unavailable {
     background-color: #a93232;
     text-indent: -9999px;
 }
@@ -669,67 +679,67 @@ div.timeline-navigation-move-right {
 
 
 
-.agg-less {
+div.timeline-event.agg-less {
     margin:0;
     background-color: #a0a0a0;
     /*border:1px solid #a0a0a0;*/
-    border-bottom: 10px solid #a0a0a0;
+    /*border-bottom: 10px solid #a0a0a0;*/
     text-indent: -9999px;
 }
-.agg-even {
+div.timeline-event.agg-even {
     margin:0;
     background-color: #ba6a24;
     /*border:1px solid #ba6a24;*/
-    border-bottom: 10px solid #ba6a24;
+    /*border-bottom: 10px solid #ba6a24;*/
     text-indent: -9999px;
 }
-.agg-1 {
+div.timeline-event.agg-1 {
     margin:0;
     background-color: #415e6b;
     /*border:1px solid #415e6b;*/
-    border-bottom: 10px solid #415e6b;
+    /*border-bottom: 10px solid #415e6b;*/
     text-indent: -9999px;
 }
-.agg-2 {
+div.timeline-event.agg-2 {
     margin:0;
     background-color: #3d5865;
     /*border:1px solid #3d5865;*/
-    border-bottom: 10px solid #3d5865;
+    /*border-bottom: 10px solid #3d5865;*/
     text-indent: -9999px;
 }
-.agg-3 {
+div.timeline-event.agg-3 {
     margin:0;
     background-color: #344c58;
     /*border:1px solid #344c58;*/
-    border-bottom: 10px solid #344c58;
+    /*border-bottom: 10px solid #344c58;*/
     text-indent: -9999px;
 }
-.agg-4 {
+div.timeline-event.agg-4 {
     margin:0;
     background-color: #2f4550;
     /*border:1px solid #2f4550;*/
-    border-bottom: 10px solid #2f4550;
+    /*border-bottom: 10px solid #2f4550;*/
     text-indent: -9999px;
 }
-.agg-5 {
+div.timeline-event.agg-5 {
     margin:0;
     background-color: #2c424c;
     /*border:1px solid #2c424c;*/
-    border-bottom: 10px solid #2c424c;
+    /*border-bottom: 10px solid #2c424c;*/
     text-indent: -9999px;
 }
-.agg-6 {
+div.timeline-event.agg-6 {
     margin:0;
     background-color: #253943;
     /*border:1px solid #253943;*/
-    border-bottom: 10px solid #253943;
+    /*border-bottom: 10px solid #253943;*/
     text-indent: -9999px;
 }
-.agg-more {
+div.timeline-event.agg-more {
     margin:0;
     background-color: #486877;
     /*border:1px solid #486877;*/
-    border-bottom: 10px solid #486877;
+    /*border-bottom: 10px solid #486877;*/
     text-indent: -9999px;
 }
 
@@ -747,76 +757,76 @@ div.timeline-navigation-move-right {
 
 
 
-.wishes-less {
+div.timeline-event.wishes-less {
     margin:0;
     background-color: #a0a0a0;
     /*border:1px solid #a0a0a0;*/
-    border-bottom: 10px solid #a0a0a0;
-    // text-indent: -9999px;
+    /*border-bottom: 10px solid #a0a0a0;*/
+    /*text-indent: -9999px;*/
     text-align: center;
 }
-.wishes-even {
+div.timeline-event.wishes-even {
     margin:0;
     background-color: #ba6a24;
     /*border:1px solid #ba6a24;*/
-    border-bottom: 10px solid #ba6a24;
-    // text-indent: -9999px;
+    /*border-bottom: 10px solid #ba6a24;*/
+    /*text-indent: -9999px;*/
     text-align: center;
 }
-.wishes-1 {
+div.timeline-event.wishes-1 {
     margin:0;
     background-color: #415e6b;
     /*border:1px solid #415e6b;*/
-    border-bottom: 10px solid #415e6b;
-    // text-indent: -9999px;
+    /*border-bottom: 10px solid #415e6b;*/
+    /*text-indent: -9999px;*/
     text-align: center;
 }
-.wishes-2 {
+div.timeline-event.wishes-2 {
     margin:0;
     background-color: #3d5865;
     /*border:1px solid #3d5865;*/
-    border-bottom: 10px solid #3d5865;
-    // text-indent: -9999px;
+    /*border-bottom: 10px solid #3d5865;*/
+    /*text-indent: -9999px;*/
     text-align: center;
 }
-.wishes-3 {
+div.timeline-event.wishes-3 {
     margin:0;
     background-color: #344c58;
     /*border:1px solid #344c58;*/
-    border-bottom: 10px solid #344c58;
-    // text-indent: -9999px;
+    /*border-bottom: 10px solid #344c58;*/
+    /*text-indent: -9999px;*/
     text-align: center;
 }
-.wishes-4 {
+div.timeline-event.wishes-4 {
     margin:0;
     background-color: #2f4550;
     /*border:1px solid #2f4550;*/
-    border-bottom: 10px solid #2f4550;
-    // text-indent: -9999px;
+    /*border-bottom: 10px solid #2f4550;*/
+    /*text-indent: -9999px;*/
     text-align: center;
 }
-.wishes-5 {
+div.timeline-event.wishes-5 {
     margin:0;
     background-color: #2c424c;
     /*border:1px solid #2c424c;*/
-    border-bottom: 10px solid #2c424c;
-    // text-indent: -9999px;
+    /*border-bottom: 10px solid #2c424c;*/
+    /*text-indent: -9999px;*/
     text-align: center;
 }
-.wishes-6 {
+div.timeline-event.wishes-6 {
     margin:0;
     background-color: #253943;
     /*border:1px solid #253943;*/
-    border-bottom: 10px solid #253943;
-    // text-indent: -9999px;
+    /*border-bottom: 10px solid #253943;*/
+    /*text-indent: -9999px;*/
     text-align: center;
 }
-.wishes-more {
+div.timeline-event.wishes-more {
     margin:0;
     background-color: #486877;
     /*border:1px solid #486877;*/
-    border-bottom: 10px solid #486877;
-    // text-indent: -9999px;
+    /*border-bottom: 10px solid #486877;*/
+    /*text-indent: -9999px;*/
     text-align: center;
 }
 
@@ -1200,7 +1210,8 @@ div.bar span {
   background-image: -moz-linear-gradient(top, #7772b5, #65619b);
   background-image: linear-gradient(top, #7772b5, #65619b);
   background-repeat: repeat-x;
-  filter: progid:dximagetransform.microsoft.gradient(startColorstr='#6e69a8', endColorstr='#7772b5', GradientType=0);
+  filter: progid:dximagetransform.microsoft.gradient(startColorstr='#6e69a8', 
+  endColorstr='#7772b5', GradientType=0);
   filter: progid:dximagetransform.microsoft.gradient(enabled=false);
   *background-color: #7772b5;
 
@@ -1375,7 +1386,8 @@ div.bar span {
   background-image: 0;
   background-image: linear-gradient(top,#0088cc,#0044cc);
   background-repeat: repeat-x;
-  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#0088cc',endColorstr='#0044cc',GradientType=0);
+  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#0088cc',endColorstr='#0044cc',
+  GradientType=0);
   border-color: #04c #04c #002a80;
   border-color: rgba(0,0,0,0.1) rgba(0,0,0,0.1) rgba(0,0,0,0.25);
   filter: progid:DXImageTransform.Microsoft.gradient(enabled=false);
@@ -1383,11 +1395,16 @@ div.bar span {
   text-shadow: 0 -1px 0 rgba(0,0,0,0.25);
 }
 
-.datepicker td.active:hover,.datepicker td.active:hover:hover,.datepicker td.active:active,.datepicker td.active:hover:active,.datepicker td.active.active,.datepicker td.active:hover.active,.datepicker td.active.disabled,.datepicker td.active:hover.disabled,.datepicker td.active[disabled],.datepicker td.active:hover[disabled] {
+.datepicker td.active:hover,.datepicker td.active:hover:hover,.datepicker td.active:active,
+.datepicker td.active:hover:active,.datepicker td.active.active,
+.datepicker td.active:hover.active,.datepicker td.active.disabled,
+.datepicker td.active:hover.disabled,.datepicker td.active[disabled],
+.datepicker td.active:hover[disabled] {
   background-color: #04c;
 }
 
-.datepicker td.active:active,.datepicker td.active:hover:active,.datepicker td.active.active,.datepicker td.active:hover.active {
+.datepicker td.active:active,.datepicker td.active:hover:active,.datepicker td.active.active,
+.datepicker td.active:hover.active {
   background-color: #039 \9;
 }
 
@@ -1417,7 +1434,8 @@ div.bar span {
   background-image: 0;
   background-image: linear-gradient(top,#0088cc,#0044cc);
   background-repeat: repeat-x;
-  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#0088cc',endColorstr='#0044cc',GradientType=0);
+  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#0088cc',endColorstr='#0044cc',
+  GradientType=0);
   border-color: #04c #04c #002a80;
   border-color: rgba(0,0,0,0.1) rgba(0,0,0,0.1) rgba(0,0,0,0.25);
   filter: progid:DXImageTransform.Microsoft.gradient(enabled=false);
@@ -1425,7 +1443,8 @@ div.bar span {
   text-shadow: 0 -1px 0 rgba(0,0,0,0.25);
 }
 
-.datepicker td span.active:hover,.datepicker td span.active:active,.datepicker td span.active.active,.datepicker td span.active.disabled,.datepicker td span.active[disabled] {
+.datepicker td span.active:hover,.datepicker td span.active:active,.datepicker td span.active.active,
+.datepicker td span.active.disabled,.datepicker td span.active[disabled] {
   background-color: #04c;
 }
 
