--- a/js/views/dashboard.html
+++ b/js/views/dashboard.html
@@ -26,6 +26,7 @@
     <div class="span4">
       <h4>Unread Messages</h4>
       <hr>
+      <p ng-hide="messages.length > 0">There are no messages unread.</p>
       <ul style="list-style: none">
       	<li ng-repeat="message in messages">
           <a href="#/messages/{{message.uuid}}">{{message.subject | noTitle}}</a> van <a href="#/profile/{{message.requester|convertEve}}/view">{{message.requester|convertEve|convertUserIdToName}}</a>
