bring back the reply function to the message list reply icon. changes in the reset password page.

--- a/js/views/login.html
+++ b/js/views/login.html
@@ -85,7 +85,7 @@
 		<form ng-submit="forgot()">
 		  <img src="img/login_knrm_logo.png" alt="KNRM" />
 			<!-- <h2>WebPaige</h2> -->
-		  <h4 class="form-signin-heading">Please sign in</h4>
+		  <h4 class="form-signin-heading">Please input your email.</h4>
 
 	      <div class="alert {{alert.forget.type}}" ng-show="alert.forget.display">
 	        <button class="close" type="button" ng-click="alert.forget=false">×</button>
