--- a/js/views/messages.html
+++ b/js/views/messages.html
@@ -215,7 +215,7 @@
                   <div class="pull-right">
                   
                     <button class="btn btn-mini"
-                            ng-click=""><i class="icon-share-alt"></i></button>
+                            ng-click="reply(message)"><i class="icon-share-alt"></i></button>
 
                     <button type="submit" 
                             ng-click="removeMessage(message.uuid)" 
