--- a/css/timeline.css
+++ b/css/timeline.css
@@ -169,9 +169,6 @@
 
 
 
-
-
-
 /*legenda*/
 .legenda {
   background-color: #f5f4ee;
@@ -623,6 +620,11 @@ div.timeline-event.state-unavailable {
 
 
 
+div.timeline-event div.timeline-event-content span.secret {
+  font-size: 0;
+}
+
+
 
 
 
@@ -1019,6 +1021,7 @@ div.bar span {
 
 .daterangepicker.dropdown-menu {
   max-width: none;
+  z-index: 99999;
 }
 
 .daterangepicker.opensleft .ranges, .daterangepicker.opensleft .calendar {
@@ -1317,6 +1320,7 @@ div.bar span {
   http://www.apache.org/licenses/LICENSE-2.0
 */
 .datepicker {
+  z-index: 99999;
   top: 0;
   left: 0;
   padding: 4px;
