--- a/js/views/planboard.html
+++ b/js/views/planboard.html
@@ -4,7 +4,7 @@
   <div class="btn-group pull-right">
     <button type="submit" 
             ng-click="toggleSlotForm()" 
-            class="btn btn-success {{(views.slot==true) && 'active'}}">Change Availability</button>
+            class="btn btn-success {{(views.slot.add==true) && 'active'}}">Change Availability</button>
   </div>
 </div>
 <!-- end page header -->
@@ -121,7 +121,7 @@
 
 
 <!-- slot controls -->
-<div class="row-fluid" ng-show="views.slot">
+<div class="row-fluid" ng-show="views.slot.add || views.slot.edit || views.group || views.wish || views.member">
 
   <form class="form-inline form-toggled well">
 
@@ -130,14 +130,18 @@
             class="close">&times;</button>
     <!-- end close btn -->
   
-    <h4>Time Slot Manager</h4>
+    <h4 ng-show="views.slot.add || views.slot.edit">Time Slot Manager</h4>
+    <h4 ng-show="views.group">Group Slot</h4>
+    <h4 ng-show="views.wish">Wish Manager</h4>
+    <h4 ng-show="views.member">Member Slot</h4>
+
     <hr>
 
     <!-- slot start -->
     <div class="form-elements-group">
       <label>From</label>
       <!-- date -->
-      <div class="control-group dater">
+      <div class="control-group dater" ng-show="views.slot.add || views.slot.edit || views.wish">
         <input  name="date-start" 
                 type="text" 
                 ng-model="slot.start.date" 
@@ -145,13 +149,27 @@
                 bs-datepicker="">
         <i class="icon-calendar"></i>
       </div>
+      <div class="control-group dater" ng-show="views.group || views.member">
+        <input  name="date-start" 
+                type="text"
+                ng-model="slot.start.date"
+                disabled>
+        <i class="icon-calendar"></i>
+      </div>
       <!-- end date -->
       <!-- time -->
-      <div class="control-group timer">
+      <div class="control-group timer" ng-show="views.slot.add || views.slot.edit || views.wish">
         <input  name="time-start" 
                 type="text" 
                 ng-model="slot.start.time" 
                 bs-timepicker>
+        <i class="icon-time"></i>
+      </div>
+      <div class="control-group timer" ng-show="views.group || views.member">
+        <input  name="time-start" 
+                type="text" 
+                ng-model="slot.start.time" 
+                disabled>
         <i class="icon-time"></i>
       </div>
       <!-- end time -->
@@ -163,7 +181,7 @@
     <div class="form-elements-group">
       <label>Till</label>
       <!-- date -->
-      <div class="control-group dater">
+      <div class="control-group dater" ng-show="views.slot.add || views.slot.edit || views.wish">
         <input  name="date-end" 
                 type="text" 
                 ng-model="slot.end.date" 
@@ -171,13 +189,27 @@
                 bs-datepicker="">
         <i class="icon-calendar"></i>
       </div>
+      <div class="control-group dater" ng-show="views.group || views.member">
+        <input  name="date-end" 
+                type="text" 
+                ng-model="slot.end.date" 
+                disabled>
+        <i class="icon-calendar"></i>
+      </div>
       <!-- end date -->
       <!-- time -->
-      <div class="control-group timer">
+      <div class="control-group timer" ng-show="views.slot.add || views.slot.edit || views.wish">
         <input  name="time-end" 
                 type="text" 
                 ng-model="slot.end.time" 
                 bs-timepicker>
+        <i class="icon-time"></i>
+      </div>
+      <div class="control-group timer" ng-show="views.group || views.member">
+        <input  name="time-end" 
+                type="text" 
+                ng-model="slot.end.time" 
+                disabled>
         <i class="icon-time"></i>
       </div>
       <!-- end time -->
@@ -186,40 +218,80 @@
 
 
     <!-- slot state -->
-    <div class="form-elements-group">
+    <div class="form-elements-group" ng-show="views.slot.add || views.slot.edit || views.member">
       <label>State</label>
       <select ng-model="slot.state" 
-              ng-options="option as value for (option, value) in states">
+              ng-options="option as value for (option, value) in states" 
+              ng-show="views.slot.add || views.slot.edit">
         <option value="">select a state</option>
+      </select>
+      <select ng-model="slot.state" 
+              disabled
+              ng-options="option as value for (option, value) in states"
+              ng-show="views.member">
       </select>
     </div>
     <!-- end slot state -->
 
 
     <!-- slot recursive -->
-    <div class="form-elements-group">
+    <div class="form-elements-group" ng-show="views.slot.add || views.slot.edit">
       <label>Re-occuring</label>
       <input type="checkbox" ng-model="slot.recursive">
     </div>
     <!-- end slot recursive -->
 
 
+    <!-- group diff -->
+    <div class="form-elements-group" ng-show="views.group">
+      <label>Difference</label>
+      {{slot.diff}}
+    </div>
+    <!-- group diff -->
+
+
+    <!-- wish diff -->
+    <div class="form-elements-group" ng-show="views.wish">
+      <label>Wished</label>
+      <input  name="wish-count" 
+              type="text" 
+              class="input-mini" 
+              ng-model="slot.wish">
+    </div>
+    <!-- end wish diff -->
+
+
+    <!-- member info -->
+    <div class="form-elements-group" ng-show="views.member">
+      <small>
+        <i>This is a combined row of planning with re-occuring rows.</i>
+      </small>
+    </div>
+    <!-- end member info -->
+
+
     <!-- slot actions -->
     <div class="form-elements-actions pull-right">
       
-      <div ng-hide="original">
+      <div ng-show="views.slot.add">
         <button type="button" 
                 ng-click="add(slot)" 
                 class="btn btn-success">Add</button>
       </div>
 
-      <div ng-show="original">
+      <div ng-show="views.slot.edit">
         <button type="button" 
                 ng-click="change(original, slot)" 
                 class="btn btn-success">Change</button>
         <button type="button" 
                 ng-click="delete()" 
                 class="btn btn-danger">Delete</button>
+      </div>
+
+      <div ng-show="views.wish">
+        <button type="button" 
+                ng-click="setWish(slot)" 
+                class="btn btn-success">Set Wish</button>
       </div>
 
     </div>
