fixed bug with timeline on edit / all working

--- a/js/views/planboard.html
+++ b/js/views/planboard.html
@@ -124,6 +124,11 @@
 
     <hr>
 
+    <!-- original -> {{original}}<br><br>
+    selected original -> {{selectedOriginal}}
+
+    <hr> -->
+
     <!-- slot start -->
     <div class="form-elements-group">
       <label>From</label>
