timeline setup for profile page / not rendering bug

--- a/js/views/groups.html
+++ b/js/views/groups.html
@@ -379,7 +379,7 @@
                         ng-model="selection[member.uuid]"
                         ng-checked="selectionMaster">
               </td>
-              <td><a href="#/profile/{{member.uuid}}/view">{{member.name}}</a></td>
+              <td><a href="#/profile/{{member.uuid}}#view">{{member.name}}</a></td>
               <td>{{member.resources.role|translateRole}}</td>
               <td>{{member.resources.PhoneAddress}}</td>
               <td>
